Log In form added

--- a/CS1Cofficial/contact.ui
+++ b/CS1Cofficial/contact.ui
@@ -11,7 +11,10 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Contact Us</string>
+  </property>
+  <property name="autoFillBackground">
+   <bool>true</bool>
   </property>
   <widget class="QLabel" name="logo_pic">
    <property name="geometry">
