Revert "Log In form added"
This reverts commit 9cc4aafd4149b7526a01e6959916623ce8ac2dc6.

--- a/CS1Cofficial/contact.ui
+++ b/CS1Cofficial/contact.ui
@@ -11,10 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Contact Us</string>
-  </property>
-  <property name="autoFillBackground">
-   <bool>true</bool>
+   <string>Dialog</string>
   </property>
   <widget class="QLabel" name="logo_pic">
    <property name="geometry">
