--- a/CS1Cofficial/mainwindow.ui
+++ b/CS1Cofficial/mainwindow.ui
@@ -2712,7 +2712,7 @@
          <enum>QFrame::StyledPanel</enum>
         </property>
         <property name="text">
-         <string>Current Shapes</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Shapes Drawn&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
